Refectored data and started writing modified document pre-processors

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 from_skillicorn/
 connections/
-datasets/*/
-datasets/*.zip
-lexicons/*/
-lexicons/*.zip
+data/*/*.zip
+data/*/*/
+data/*/*.csv
 .idea/
 venv/
+*__pycache__/
