--- a/requirements.txt
+++ b/requirements.txt
@@ -154,3 +154,84 @@ urllib3==1.25.3
 wasabi==0.2.2
 Werkzeug==0.15.4
 xgboost==0.90
+absl-py==0.7.1
+astor==0.8.0
+attrs==19.1.0
+backcall==0.1.0
+blis==0.2.4
+boto==2.49.0
+boto3==1.9.156
+botocore==1.12.156
+certifi==2019.3.9
+chardet==3.0.4
+colorama==0.4.1
+cycler==0.10.0
+cymem==2.0.2
+decorator==4.4.0
+docutils==0.14
+en-core-web-sm==2.1.0
+fasttext==0.8.22
+gast==0.2.2
+gensim==3.7.3
+google-pasta==0.1.6
+grpcio==1.21.1
+h5py==2.9.0
+idna==2.8
+imageio==2.5.0
+ipython==7.5.0
+ipython-genutils==0.2.0
+jedi==0.13.3
+jmespath==0.9.4
+joblib==0.13.2
+jsonschema==3.0.1
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+kiwisolver==1.1.0
+Markdown==3.1.1
+matplotlib==3.1.0
+mock==3.0.5
+murmurhash==1.0.2
+networkx==2.3
+numpy==1.16.3
+pandas==0.24.2
+parso==0.4.0
+pickleshare==0.7.5
+Pillow==6.0.0
+plac==0.9.6
+preshed==2.0.1
+prompt-toolkit==2.0.9
+protobuf==3.7.1
+pybind11==2.2.4
+Pygments==2.4.2
+pyparsing==2.4.0
+pyrsistent==0.15.2
+python-dateutil==2.8.0
+pytz==2019.1
+PyWavelets==1.0.3
+PyYAML==5.1
+requests==2.22.0
+s3transfer==0.2.0
+scikit-image==0.15.0
+scikit-learn==0.21.2
+scipy==1.3.0
+shap==0.29.1
+six==1.12.0
+sklearn==0.0
+smart-open==1.8.3
+spacy==2.1.4
+srsly==0.0.5
+tb-nightly==1.14.0a20190301
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+tf-estimator-nightly==1.14.0.dev2019030115
+thinc==7.0.4
+tqdm==4.32.1
+traitlets==4.3.2
+urllib3==1.25.3
+wasabi==0.2.2
+wcwidth==0.1.7
+Werkzeug==0.15.4
+xgboost==0.90
