--- a/requirements.txt
+++ b/requirements.txt
@@ -1,159 +1,3 @@
-joblib==0.13.2
-numpy==1.16.3
-pandas==0.24.2
-python-dateutil==2.8.0
-pytz==2019.1
-scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-sklearn==0.0
-xgboost==0.90
-absl-py==0.7.1
-astor==0.8.0
-gast==0.2.2
-google-pasta==0.1.6
-grpcio==1.21.1
-h5py==2.9.0
-joblib==0.13.2
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-Markdown==3.1.1
-numpy==1.16.3
-pandas==0.24.2
-protobuf==3.7.1
-python-dateutil==2.8.0
-pytz==2019.1
-scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-sklearn==0.0
-tb-nightly==1.14.0a20190301
-tensorflow==2.0.0a0
-termcolor==1.1.0
-tf-estimator-nightly==1.14.0.dev2019030115
-Werkzeug==0.15.4
-xgboost==0.90
-absl-py==0.7.1
-astor==0.8.0
-attrs==19.1.0
-blis==0.2.4
-boto==2.49.0
-boto3==1.9.156
-botocore==1.12.156
-certifi==2019.3.9
-chardet==3.0.4
-cymem==2.0.2
-docutils==0.14
-fasttext==0.8.22
-gast==0.2.2
-gensim==3.7.3
-google-pasta==0.1.6
-grpcio==1.21.1
-h5py==2.9.0
-idna==2.8
-jmespath==0.9.4
-joblib==0.13.2
-jsonschema==3.0.1
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-Markdown==3.1.1
-mock==3.0.5
-murmurhash==1.0.2
-numpy==1.16.3
-pandas==0.24.2
-plac==0.9.6
-preshed==2.0.1
-protobuf==3.7.1
-pybind11==2.2.4
-pyrsistent==0.15.2
-python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1
-requests==2.22.0
-s3transfer==0.2.0
-scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-sklearn==0.0
-smart-open==1.8.3
-spacy==2.1.4
-srsly==0.0.5
-tb-nightly==1.14.0a20190301
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
-tf-estimator-nightly==1.14.0.dev2019030115
-thinc==7.0.4
-tqdm==4.32.1
-urllib3==1.25.3
-wasabi==0.2.2
-Werkzeug==0.15.4
-xgboost==0.90
-absl-py==0.7.1
-astor==0.8.0
-attrs==19.1.0
-blis==0.2.4
-boto==2.49.0
-boto3==1.9.156
-botocore==1.12.156
-certifi==2019.3.9
-chardet==3.0.4
-cycler==0.10.0
-cymem==2.0.2
-docutils==0.14
-en-core-web-sm==2.1.0
-fasttext==0.8.22
-gast==0.2.2
-gensim==3.7.3
-google-pasta==0.1.6
-grpcio==1.21.1
-h5py==2.9.0
-idna==2.8
-jmespath==0.9.4
-joblib==0.13.2
-jsonschema==3.0.1
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-kiwisolver==1.1.0
-Markdown==3.1.1
-matplotlib==3.1.0
-mock==3.0.5
-murmurhash==1.0.2
-numpy==1.16.3
-pandas==0.24.2
-plac==0.9.6
-preshed==2.0.1
-protobuf==3.7.1
-pybind11==2.2.4
-pyparsing==2.4.0
-pyrsistent==0.15.2
-python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1
-requests==2.22.0
-s3transfer==0.2.0
-scikit-learn==0.21.2
-scipy==1.3.0
-six==1.12.0
-sklearn==0.0
-smart-open==1.8.3
-spacy==2.1.4
-srsly==0.0.5
-tb-nightly==1.14.0a20190301
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==1.1.0
-tf-estimator-nightly==1.14.0.dev2019030115
-thinc==7.0.4
-tqdm==4.32.1
-urllib3==1.25.3
-wasabi==0.2.2
-Werkzeug==0.15.4
-xgboost==0.90
 absl-py==0.7.1
 astor==0.8.0
 attrs==19.1.0
@@ -169,8 +13,6 @@ cycler==0.10.0
 cymem==2.0.2
 decorator==4.4.0
 docutils==0.14
-en-core-web-sm==2.1.0
-fasttext==0.8.22
 gast==0.2.2
 gensim==3.7.3
 google-pasta==0.1.6
@@ -230,6 +72,7 @@ tf-estimator-nightly==1.14.0.dev2019030115
 thinc==7.0.4
 tqdm==4.32.1
 traitlets==4.3.2
+Unidecode==1.0.23
 urllib3==1.25.3
 wasabi==0.2.2
 wcwidth==0.1.7
