--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+blis==0.4.1
+catalogue==1.0.0
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+cymem==2.0.3
 dask==2.10.1
 empath==0.89
 fasttext==0.9.1
 fsspec==0.6.2
 h5py==2.10.0
 idna==2.8
+importlib-metadata==1.5.0
 joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
@@ -14,10 +18,13 @@ Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 locket==0.2.0
 matplotlib==3.1.2
+murmurhash==1.0.2
 nltk==3.4.5
 numpy==1.18.1
 pandas==1.0.0
 partd==1.1.0
+plac==1.1.3
+preshed==3.0.2
 pybind11==2.4.3
 pyparsing==2.4.6
 python-dateutil==2.8.1
@@ -28,7 +35,13 @@ scikit-learn==0.22.1
 scipy==1.4.1
 shap==0.34.0
 six==1.14.0
+spacy==2.2.3
+srsly==1.0.1
+thinc==7.3.1
 toolz==0.10.0
 tqdm==4.42.0
 Unidecode==1.1.1
 urllib3==1.25.8
+wasabi==0.6.0
+xgboost==0.90
+zipp==2.1.0
