--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,74 @@
 absl-py==0.9.0
 astor==0.8.1
-beautifulsoup4==4.8.2
-blis==0.4.1
-bs4==0.0.1
-cachetools==4.0.0
-catalogue==1.0.0
-certifi==2019.11.28
+beautifulsoup4==4.9.0
+bokeh==2.0.2
+cachetools==4.1.0
+certifi==2020.4.5.1
 chardet==3.0.4
+click==7.1.1
+cloudpickle==1.4.0
 cycler==0.10.0
-cymem==2.0.3
-dask==2.10.1
+dask==2.15.0
+distributed==2.15.0
 empath==0.89
 fasttext==0.9.1
-fsspec==0.6.2
+fsspec==0.7.3
 gast==0.2.2
-google-auth==1.11.0
+google-auth==1.14.1
 google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
-grpcio==1.27.1
+google-pasta==0.2.0
+grpcio==1.28.1
 h5py==2.10.0
-idna==2.8
-importlib-metadata==1.5.0
+HeapDict==1.0.1
+idna==2.9
+Jinja2==2.11.2
 joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
+kiwisolver==1.2.0
 locket==0.2.0
-Markdown==3.2
-matplotlib==3.1.2
-mock==4.0.1
-murmurhash==1.0.2
-nltk==3.4.5
-numpy==1.18.1
+Markdown==3.2.1
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+msgpack==1.0.0
+nltk==3.5
+numpy==1.18.3
 oauthlib==3.1.0
-opt-einsum==3.1.0
-pandas==1.0.0
+opt-einsum==3.2.1
+packaging==20.3
+pandas==1.0.3
 partd==1.1.0
-plac==1.1.3
-preshed==3.0.2
+Pillow==7.1.2
 protobuf==3.11.3
+psutil==5.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pybind11==2.4.3
-pyparsing==2.4.6
+pybind11==2.5.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==5.3
-requests==2.22.0
+PyYAML==5.3.1
+regex==2020.4.4
+requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
-scikit-learn==0.22.1
+scikit-learn==0.22.2.post1
 scipy==1.4.1
-shap==0.34.0
 six==1.14.0
-soupsieve==1.9.5
-spacy==2.2.3
-srsly==1.0.1
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
+sortedcontainers==2.1.0
+soupsieve==2.0
+tblib==1.6.0
+tensorboard==2.1.1
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
 termcolor==1.1.0
-thinc==7.3.1
 toolz==0.10.0
-tqdm==4.42.0
+tornado==6.0.4
+tqdm==4.45.0
+typing-extensions==3.7.4.2
 Unidecode==1.1.1
-urllib3==1.25.8
-wasabi==0.6.0
-Werkzeug==1.0.0
-wrapt==1.11.2
-xgboost==0.90
-zipp==2.1.0
+urllib3==1.25.9
+Werkzeug==1.0.1
+wrapt==1.12.1
+zict==2.0.0
