--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 absl-py==0.9.0
 astor==0.8.1
 beautifulsoup4==4.9.0
+blis==0.4.1
 bokeh==2.0.2
 cachetools==4.1.0
+catalogue==1.0.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 cloudpickle==1.4.0
 cycler==0.10.0
+cymem==2.0.3
 dask==2.15.0
 distributed==2.15.0
 empath==0.89
@@ -21,17 +24,20 @@ grpcio==1.28.1
 h5py==2.10.0
 HeapDict==1.0.1
 idna==2.9
+importlib-metadata==1.6.0
 Jinja2==2.11.2
 joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+keras-self-attention==0.42.0
 kiwisolver==1.2.0
 locket==0.2.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 msgpack==1.0.0
+murmurhash==1.0.2
 nltk==3.5
 numpy==1.18.3
 oauthlib==3.1.0
@@ -40,6 +46,8 @@ packaging==20.3
 pandas==1.0.3
 partd==1.1.0
 Pillow==7.1.2
+plac==1.1.3
+preshed==3.0.2
 protobuf==3.11.3
 psutil==5.7.0
 pyasn1==0.4.8
@@ -58,17 +66,23 @@ scipy==1.4.1
 six==1.14.0
 sortedcontainers==2.1.0
 soupsieve==2.0
+spacy==2.2.4
+srsly==1.0.2
 tblib==1.6.0
 tensorboard==2.1.1
 tensorflow==2.1.0
 tensorflow-estimator==2.1.0
 termcolor==1.1.0
+thinc==7.4.0
 toolz==0.10.0
 tornado==6.0.4
 tqdm==4.45.0
 typing-extensions==3.7.4.2
 Unidecode==1.1.1
 urllib3==1.25.9
+wasabi==0.6.0
 Werkzeug==1.0.1
 wrapt==1.12.1
+xgboost==1.0.2
 zict==2.0.0
+zipp==3.1.0
