--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 absl-py==0.9.0
 astor==0.8.1
+astunparse==1.6.3
 beautifulsoup4==4.9.0
 blis==0.4.1
 bokeh==2.0.2
+boto==2.49.0
+boto3==1.14.13
+botocore==1.17.13
 cachetools==4.1.0
 catalogue==1.0.0
 certifi==2020.4.5.1
@@ -11,12 +15,17 @@ click==7.1.1
 cloudpickle==1.4.0
 cycler==0.10.0
 cymem==2.0.3
+Cython==0.29.14
 dask==2.15.0
 distributed==2.15.0
+docutils==0.15.2
 empath==0.89
+en-core-web-md==2.2.5
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
 fasttext==0.9.1
 fsspec==0.7.3
-gast==0.2.2
+gast==0.3.3
+gensim==3.8.3
 google-auth==1.14.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
@@ -26,10 +35,11 @@ HeapDict==1.0.1
 idna==2.9
 importlib-metadata==1.6.0
 Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.14.1
-Keras==2.3.1
+Keras==2.4.3
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
+Keras-Preprocessing==1.1.2
 keras-self-attention==0.42.0
 kiwisolver==1.2.0
 locket==0.2.0
@@ -61,17 +71,21 @@ regex==2020.4.4
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
+s3transfer==0.3.3
 scikit-learn==0.22.2.post1
 scipy==1.4.1
+shap==0.35.0
 six==1.14.0
+smart-open==2.0.0
 sortedcontainers==2.1.0
 soupsieve==2.0
 spacy==2.2.4
 srsly==1.0.2
 tblib==1.6.0
-tensorboard==2.1.1
-tensorflow==2.1.0
-tensorflow-estimator==2.1.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
 termcolor==1.1.0
 thinc==7.4.0
 toolz==0.10.0
