--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 keras-self-attention==0.42.0
 kiwisolver==1.2.0
+krippendorff==0.3.2
 locket==0.2.0
 Markdown==3.2.1
 MarkupSafe==1.1.1
@@ -59,6 +60,7 @@ Pillow==7.1.2
 plac==1.1.3
 preshed==3.0.2
 protobuf==3.11.3
+pstat==0.0.1
 psutil==5.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
